--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <script src="Libraries/p5.js"></script>
     <script src="Libraries/addons/p5.dom.min.js"></script>
     <script src="Libraries/addons/p5.sound.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.1.0/socket.io.js"></script>
+    <script src="Libraries/addons/socket.io.js"></script>
     <script src="sketch.js"></script>
   </head>
   <body>
