--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
     <script src="Libraries/addons/p5.sound.min.js"></script>
     <script src="Libraries/addons/socket.io.js"></script>
     <script src="sketch.js"></script>
+      <link rel="stylesheet" href="site.css">
   </head>
   <body>
   </body>
