--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,38 @@
     <script src="Libraries/addons/socket.io.js"></script>
     <script src="sketch.js"></script>
       <link rel="stylesheet" href="site.css">
+      <link href="https://fonts.googleapis.com/css?family=Do+Hyeon" rel="stylesheet">
   </head>
   <body>
+  <div id="drawingcanvasgoeshere"></div>
+  <div id="container">
+      <div id="container1st">
+          <h1>Controls:</h1>
+          <h2>
+              [Q] - makes the colour more <span class="red">red</span><br>
+              [W] - makes the colour more <span class="green">green</span><br>
+              [E] - makes the colour more <span class="blue">blue</span><br>
+              [S] - makes the brush <span style="font-size: small">smaller</span><br>
+              [D] - makes the brush <span style="font-size: larger">bigger</span><br>
+          </h2>
+  </div>
+      <div id="container2nd">
+          <h1>
+              Controls (cont.):
+          </h1>
+          <h2>
+              [0-9] - places a happy face on the screen :)<br>
+              [!!!] - clears the screen (very dangerous)<br>
+              [:)] - starts a fun game (first to 50 points)<br>
+          </h2>
+          <h3>
+              You're always losing colour if you don't draw stuff.<br>
+              You can see what colour you're about to paint at the top right.<br>
+          </h3>
+      </div>
+  </div>
+
+
+
   </body>
 </html>
