Winner decision for ties, fixed up word display
In the case of two players reaching the goal score, the player with higher score is the winner. If they are equal the player who was guessing wins over the drawer.

--- a/public/index.html
+++ b/public/index.html
@@ -34,13 +34,11 @@
               [:)] - starts a fun game (first to 50 points)<br>
           </h2>
           <h3>
-              You're always losing colour if you don't draw stuff.<br>
+              You're always losing colour if you don't draw stuff. You get more colour while drawing.<br>
               You can see what colour you're about to paint at the top right.<br>
           </h3>
       </div>
   </div>
-
-
 
   </body>
 </html>
