--- a/public/index.html
+++ b/public/index.html
@@ -3,10 +3,10 @@
   <head>
     <meta name="viewport" width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0>
     <style> body {padding: 0; margin: 0;} </style>
-    <script src="Libraries/p5.js"></script>
-    <script src="Libraries/addons/p5.dom.min.js"></script>
-    <script src="Libraries/addons/p5.sound.min.js"></script>
-    <script src="Libraries/addons/socket.io.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.6.1/p5.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.6.1/addons/p5.dom.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.6.1/addons/p5.sound.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.1.0/socket.io.js"></script>
     <script src="sketch.js"></script>
       <link rel="stylesheet" href="site.css">
       <link href="https://fonts.googleapis.com/css?family=Do+Hyeon" rel="stylesheet">
