Changed key input -> keycode, added shift+0-9 for more emotes
and a correct guess sound

--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
               Controls (cont.):
           </h1>
           <h2>
-              [0-9] - places a happy face on the screen :)<br>
+              [0-9] or [Shift + 0-9] - places a happy face on the screen :)<br>
               [!!!] - clears the screen (very dangerous)<br>
               [:)] - starts a fun game (first to 50 points)<br>
           </h2>
