Added eraser, loading page, reduced timer and enhanced drawing
Also reduced hint threshold to account for new timer

Eraser will switch back to your previous colour when finished

Drawing was circles before because of reasons and now its lines

V. cool loading page added

--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,7 @@
   </head>
   <body>
   <div id="drawingcanvasgoeshere"></div>
+  <div id="p5_loading"><img src="img/loading.png" alt="loading" /></div>
   <div id="container">
       <div id="container1st">
           <h1>Controls:</h1>
@@ -20,6 +21,7 @@
               [Q] - makes the colour more <span class="red">red</span><br>
               [W] - makes the colour more <span class="green">green</span><br>
               [E] - makes the colour more <span class="blue">blue</span><br>
+              [A] - er[A]ses stuff<br>
               [S] - makes the brush <span style="font-size: small">smaller</span><br>
               [D] - makes the brush <span style="font-size: larger">bigger</span><br>
           </h2>
@@ -39,6 +41,5 @@
           </h3>
       </div>
   </div>
-
   </body>
 </html>
